--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-community/async-storage": "^1.10.0",
+    "native-base": "^2.13.12",
     "react": "16.11.0",
     "react-native": "0.62.2"
   },
